<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vToolbar"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/brown">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_arrow_back_black"
            android:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cappuccino"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTime"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_time_black"
        android:tint="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/vToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ivFavorite"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFavorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_favorite_black"
        android:tint="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/vToolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ivTime"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quize_minutos"
        app:layout_constraintTop_toBottomOf="@id/ivTime"
        app:layout_constraintLeft_toLeftOf="@id/ivTime"
        app:layout_constraintRight_toRightOf="@id/ivTime"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_favorite"
        app:layout_constraintTop_toBottomOf="@id/ivFavorite"
        app:layout_constraintLeft_toLeftOf="@id/ivFavorite"
        app:layout_constraintRight_toRightOf="@id/ivFavorite"/>

    <View
        android:id="@+id/vSeparator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMsgCappuccino"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_cappuccino"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/vSeparator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvMsgCappuccino"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="16dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIgredient"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_right_black"
        android:tint="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/tvTitleIngredients"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_espresso"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/ivIgredient"
        app:layout_constraintLeft_toRightOf="@id/ivIgredient" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIgredient2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_right_black"
        android:tint="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/tvIngredient"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIngredient2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cem_ml_leite"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/ivIgredient2"
        app:layout_constraintLeft_toRightOf="@id/ivIgredient2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIgredient3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_right_black"
        android:tint="@color/brown"
        app:layout_constraintTop_toBottomOf="@id/tvIngredient2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIngredient3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uma_colher_chocolate_em_po"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/ivIgredient3"
        app:layout_constraintLeft_toRightOf="@id/ivIgredient3" />

</androidx.constraintlayout.widget.ConstraintLayout>